mdapiorg/mdapiorg-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdapiorg
  namespace: mdapiorg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
    nginx.ingress.kubernetes.io/permanent-redirect: https://mdapi.ch
spec:
  ingressClassName: nginx
  rules:
    - host: mdapi.org
      http:
        paths:
          - backend:
              service:
                name: nonexistent
                port:
                  name: none
            path: /
            pathType: Prefix
    - host: "*.mdapi.org"
      http:
        paths:
          - backend:
              service:
                name: nonexistent
                port:
                  name: none
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mdapi.org
        - "*.mdapi.org"
      secretName: mdapiorg-cert
